@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN02SteppingAction.cc,v 1.1 1999-01-07 16:05:50 gunter Exp $
+// $Id: ExN02SteppingAction.cc,v 1.2 1999-04-16 11:20:01 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -19,10 +19,8 @@ ExN02SteppingAction::ExN02SteppingAction(ExN02DetectorConstruction* myDC, ExN02E
 :myDetector(myDC), eventAction(myEA)
 { }
 
-void ExN02SteppingAction::UserSteppingAction()
+void ExN02SteppingAction::UserSteppingAction(const G4Step* aStep)
 {
-  G4Step* aStep = GetSteppingManager()->GetStep();
-  
   // collect the energy deposited in the absorber
   
   const G4VPhysicalVolume* currentVolume = aStep->GetPreStepPoint()-> GetPhysicalVolume();
