@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-07 16:05:43 gunter Exp $
+$Id: History,v 1.2 1999-04-16 11:19:54 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+16th April 1999 H.Kurashige
+- modify ExN02SteppingAction::UserSteppingAction
+- modify ExN02PhysicsList::SetCuts
 
  4th December 1998 John Apostolakis
 
